syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.cephid.grpc";

service OnboardingService {
  rpc RegisterUser (RegisterRequest) returns (RegisterResponse) {}
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3; // In real life, send a hash or handle securely
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  string userId = 3;
}

// to pblsh to kafka topic "user_registered"
message UserRegisteredEvent {
  string userId = 1;
  string email = 2;
  int64 timestamp = 3;
}