syntax = "proto3";

// The proto package (required!)
package com.example.grpc;

// Generate multiple Java/Kotlin files instead of one outer class
option java_multiple_files = true;

// Java package (Kotlin will use this too)
option java_package = "com.example.grpc";

service PingService {
  rpc Ping (PingRequest) returns (PingReply);
}

message PingRequest {
  string message = 1;
}

message PingReply {
  string message = 1;
}
